styled the miniplayer column and playing window. Yet to fix out of place video-stats

--- a/styles/general.css
+++ b/styles/general.css
@@ -1,3 +1,10 @@
 body {
-    margin-top: 100px;
+    margin-top: 80px;
+    padding: 0px;
+}
+
+#page-grid {
+    display: grid;
+    grid-template-columns: 920px 450px;
+    margin-right: 20px;
 }
